<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.dynami</groupId>
	<artifactId>Dynami-Runtime</artifactId>
	<version>0.0.1</version>
	<name>Dynami-Runtime</name>
	<description>Dynami runtime engine for executing trading strategies</description>
	<repositories>
		<repository>
			<id>dynami-runtime-in-project</id>
			<name>In Dynami Runtime Repo</name>
			<url>file://${project.basedir}/libs</url>
		</repository>
	</repositories>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>src_test</testSourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>net.sf.flexjson</groupId>
			<artifactId>flexjson</artifactId>
			<version>3.3</version>
		</dependency>
		<dependency>
			<groupId>com.beust</groupId>
			<artifactId>jcommander</artifactId>
			<version>1.48</version>
		</dependency>
		<dependency>
			<groupId>org.dynami</groupId>
			<artifactId>Dynami-Core</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>co.dv01.jquantlib</groupId>
			<artifactId>core</artifactId>
			<version>0.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.dynami</groupId>
			<artifactId>Dynami-Orm</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.19.3</version>
		</dependency>
		<dependency>
			<groupId>org.dynami</groupId>
			<artifactId>Dynami-TA</artifactId>
			<version>0.0.1</version>
		</dependency>
	</dependencies>
</project>
